fix: layout on mobile, add prev tourney to new

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@ body {
     'Helvetica Neue', sans-serif;
   box-sizing: border-box;
 }
+
+@supports (padding: max(0px)) {
+  body,
+  header,
+  footer {
+    padding-left: min(0vmin, env(safe-area-inset-left));
+    padding-right: min(0vmin, env(safe-area-inset-right));
+  }
+}
